my first commit

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 db_name = gocontacts
-db_pass = man
+db_pass = 3@141592Pi
 db_user = postgres
 db_type = postgres
 db_host = localhost
 db_port = 5434
-token_password = thisIsTheJwtPassword
-database_url = postgres://postgres:man@localhost:5434/tests
+token_password = 3141592
+database_url = postgres://postgres:3@141592Pi@localhost:5434/tests
