--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ db_type = postgres
 db_host = localhost
 db_port = 5434
 token_password = 3141592
-database_url = postgres://postgres:3@141592Pi@localhost:5434/tests
+database_url = postgres://postgres:3@141592Pi@localhost:5434/gocontacts
